BML: Fixed source title spacing issue

--- a/app/assets/stylesheets/sources.css.scss
+++ b/app/assets/stylesheets/sources.css.scss
@@ -33,6 +33,7 @@
 
     .source_title {
       display: block;
+      padding: 0 .7em;
       overflow-wrap: break-word;
       font-size: 0.75em;
     }
